@@ -20,8 +20,14 @@ DEVELOPMENT HEAD
 
   INTERNALS:
 
-    * Test case failures have the exception printed after the log for your
-      viewing pleasure.
+    * Test case failures have the exception printed after the log 
+      for your viewing pleasure.
+
+
+  TESTING:
+
+    * Removed testsweet module so that tests can be run after 
+      bzr installed by 'bzr selftest'.
 
       
 bzr 0.0.9 2005-09-23
